--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,11 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["contextMenus"]
+  "permissions": ["contextMenus"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ]
 }
