--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "exclude_matches": ["https://store.google.com/*"],
+      "css": ["contentScript.css"],
       "js": ["contentScript.js"]
     }
   ]
