--- a/manifest.json
+++ b/manifest.json
@@ -16,10 +16,10 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["contextMenus"],
+  "permissions": ["contextMenus", "saerch", "tabs", "storage"],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.google.com/"],
       "exclude_matches": ["https://store.google.com/*"],
       "css": ["contentScript.css"],
       "js": ["contentScript.js"]
