--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["contextMenus", "saerch", "tabs", "storage"],
+  "permissions": ["contextMenus", "search", "tabs", "storage"],
   "content_scripts": [
     {
       "matches": ["https://www.google.com/"],
